# sentinel

./: .gitignore  README.md  pyproject.toml
configs/examples/: demand_forecast.yaml  fraud_graph.yaml  insurance_fraud.yaml  minimal.yaml  multi_agent_underwriting.yaml  ner_entity_extraction.yaml  product_reco.yaml  rag_claims_agent.yaml
demo/: README.md
demo/configs/: claims_rag.yaml  clinical_decision.yaml  credit_decisioning.yaml  multi_team_agents.yaml  product_reco.yaml  showcase_all.yaml  volatility_forecast.yaml
demo/data/: generate_bank_data.py  generate_ecommerce_data.py  generate_healthcare_data.py  generate_insurer_data.py  generate_platform_data.py  generate_quant_data.py  seed_showcase.py
demo/envs/: bank.env  ecommerce.env  healthcare.env  insurer.env  platform.env  quant.env
demo/leavebehind/: bank.md  ecommerce.md  healthcare.md  insurer.md  platform.md  quant.md
demo/pitchdeck/: 00_title.md  01_problem_bank.md  01_problem_ecommerce.md  01_problem_healthcare.md  01_problem_insurer.md  01_problem_platform.md  01_problem_quant.md  02_architecture.md  03_50line_integration.md  04_drift_stack.md  05_llmops_guardrails.md  06_token_economics.md  07_agentops_safety.md  08_beyond_accuracy.md  09_compliance_matrix.md  10_close.md  11_dashboard.md  README.md
demo/scripts/: bank_demo.sh  ecommerce_demo.sh  healthcare_demo.sh  insurer_demo.sh  platform_demo.sh  quant_demo.sh  showcase_demo.sh
docs/: architecture.md  azure.md  cloud-integration-guide.md  codebase-guide.md  config-reference.md  config-system.md  demo-guide.md  developer-guide.md  offering-guide.md  quickstart.md  security.md
scripts/: demo_llm_agentops.py  demo_mlops.py  run_dashboard.py  view_api_docs.py
sentinel/: __init__.py
sentinel/action/: __init__.py
sentinel/action/deployment/: __init__.py  manager.py  promotion.py
sentinel/action/notifications/: __init__.py  engine.py  escalation.py  policies.py
sentinel/action/retrain/: __init__.py  approval.py  orchestrator.py  triggers.py
sentinel/agentops/: __init__.py  agent_registry.py  client.py
sentinel/agentops/eval/: __init__.py  golden_datasets.py  task_completion.py  trajectory.py
sentinel/agentops/integrations/: __init__.py  langgraph.py
sentinel/agentops/multi_agent/: __init__.py  consensus.py  delegation.py  orchestration.py
sentinel/agentops/safety/: __init__.py  budget_guard.py  escalation.py  loop_detector.py  sandbox.py
sentinel/agentops/tool_audit/: __init__.py  monitor.py  permissions.py  replay.py
sentinel/agentops/trace/: __init__.py  tracer.py  visualiser.py
sentinel/cli/: __init__.py  main.py
sentinel/cli/templates/: azure-pipelines.yml.j2
sentinel/config/: __init__.py  aws_secrets.py  defaults.py  gcp_secrets.py  keyvault.py  loader.py  references.py  schema.py  secrets.py  signing.py  source.py
sentinel/core/: __init__.py  client.py  exceptions.py  hooks.py  scheduler.py  types.py
sentinel/dashboard/: __init__.py  deps.py  server.py  state.py
sentinel/dashboard/routes/: __init__.py  api.py  models.py  pages.py
sentinel/dashboard/security/: auth.py  (+8 more)
sentinel/domains/: __init__.py  base.py
sentinel/foundation/: __init__.py
sentinel/integrations/: __init__.py
sentinel/intelligence/: __init__.py  explainability.py  kpi_linker.py  model_graph.py
sentinel/llmops/: __init__.py  client.py  prompt_drift.py  prompt_manager.py  token_economics.py
sentinel/observability/: __init__.py  cohort_analyzer.py  cost_monitor.py  data_quality.py  feature_health.py
tests/: conftest.py  functional_audit.py
tests/unit/: test_agentops_eval.py  test_agentops_multi_agent.py  test_agentops_safety.py  test_audit_v4_intelligence.py  test_audit_v4_threadsafety.py  test_cli_enhancements.py  test_cohort_analyzer.py  test_compliance_full.py  test_concept_drift_streaming.py  test_config_loader.py  test_count_based_drift.py  test_custom_guardrails.py  test_data_quality_full.py  test_dataset_registry.py  test_deployment.py  test_domain_adapters.py  test_drift_detectors.py  test_drift_windowing.py  test_evaluator_full.py  test_experiment_tracker_enhanced.py  test_experiment_tracker_full.py  test_explainability.py  test_feature_health.py  test_format_compliance.py  test_foundation.py  test_graph_metrics.py  test_kpi_linker.py  test_lineage_full.py  test_llmops_guardrails.py  test_model_drift.py  test_notification_retry.py  test_notifications.py  test_plugin_guardrails.py  test_prompt_drift_full.py  test_prompt_manager_full.py  test_recommendation_quality.py  test_regulatory_guardrail.py  test_retrieval_quality_full.py  test_scheduler.py  test_semantic_drift_full.py  (+3 more)
(+204 files in other folders)
