[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-mlops"
version = "0.1.0"
description = "Unified MLOps + LLMOps + AgentOps SDK for regulated enterprise AI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Project Sentinel" }]
keywords = ["mlops", "llmops", "agentops", "monitoring", "drift", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "structlog>=23.0",
    "croniter>=1.3",
]

[project.optional-dependencies]
drift = ["scipy>=1.10", "scikit-learn>=1.3"]
explain = ["shap>=0.42", "lime>=0.2"]
viz = ["plotly>=5.15", "dash>=2.14"]
azure = [
    "azure-ai-ml>=1.12",
    "azure-storage-blob>=12.19",
    "azure-identity>=1.15",
    "azure-keyvault-secrets>=4.8",
    "azure-mgmt-web>=7.2",
]
k8s = ["kubernetes>=29.0"]
aws = ["boto3>=1.28", "sagemaker>=2.200"]
gcp = ["google-cloud-storage>=2.10", "google-auth>=2.25"]
notify-slack = ["slack-sdk>=3.23"]
notify-teams = ["pymsteams>=0.2"]
notify-pagerduty = ["pdpyras>=5.2"]
mlflow = ["mlflow>=2.10"]
llmops = [
    "tiktoken>=0.7",
    "openai>=1.30",
    "sentence-transformers>=3.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
agentops = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
]
langgraph = ["langgraph>=0.2"]
semantic-kernel = ["semantic-kernel>=1.0"]
timeseries = ["statsmodels>=0.14", "pmdarima>=2.0"]
nlp-domain = ["sentence-transformers>=3.0", "spacy>=3.7"]
recommendation = ["implicit>=0.7", "recbole>=1.2"]
graph = ["networkx>=3.2", "torch-geometric>=2.5"]
dashboard = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "httpx>=0.25",
    "PyJWT[crypto]>=2.8",
]
all = [
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "shap>=0.42",
    "plotly>=5.15",
    "dash>=2.14",
    "tiktoken>=0.7",
    "openai>=1.30",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "statsmodels>=0.14",
    "networkx>=3.2",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "httpx>=0.25",
    "PyJWT[crypto]>=2.8",
]
# Heavy ML/NLP extras that pull torch + spacy. Kept separate from `all` so
# that `pip install -e ".[all]"` stays installable on Python 3.13 (where
# torch wheels are not yet published for every platform) and on lightweight
# CI environments. Install these explicitly only if you need embedding-based
# semantic drift, jailbreak detection, topic fencing, or PII analysis.
ml-extras = [
    "sentence-transformers>=3.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
    "hypothesis>=6.90",
    "mkdocs-material>=9.5",
]

[project.scripts]
sentinel = "sentinel.cli.main:cli"

[project.urls]
Homepage = "https://github.com/project-sentinel/sentinel-mlops"
Documentation = "https://project-sentinel.github.io/sentinel-mlops"
Repository = "https://github.com/project-sentinel/sentinel-mlops"

[tool.setuptools.packages.find]
include = ["sentinel*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501", "N803", "N806"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's idiomatic Depends() default pattern intentionally trips B008.
"sentinel/dashboard/routes/*.py" = ["B008"]
# Tests use broad exception checks, mid-file imports, and ML naming conventions.
"tests/**/*.py" = ["B017", "E402", "N802", "RUF043", "SIM117"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_any_generics = true
warn_return_any = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring external services",
    "slow: slow-running tests",
]
asyncio_mode = "auto"
